# ros_winml_arm

./: README.md  demo.bat  demo.rosinstall
UWPApp/embedded_world/: DetectedObjectPose.cs
k4a_arm_support/: CMakeLists.txt  package.xml
k4a_arm_support/calibration/: lifecam_studio.yaml
k4a_arm_support/launch/: aruco_demo.launch  k4a_demo.launch  k4a_fake.launch  urdf.launch
k4a_arm_support/src/: k4a_arm_support.cpp
k4a_arm_support/urdf/: K4A.xacro  UR3_K4A.xacro  UR3_Lifecam.xacro  workcell.xacro
k4a_arm_support/viz/: visualize.rviz
ur3_k4a-moveit_config/launch/: UR3_with_k4a_execution.launch  UR3_with_k4a_moveit_controller_manager.launch.xml  moveit.rviz
xarm6_k4a_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
xarm6_k4a_moveit_config/config/: ros_controllers.yaml  xarm6_with_gripper_and_k4a.srdf
xarm6_k4a_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  moveit_rviz_common.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  realMove_exec.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  xarm6_k4a_moveit_gazebo.launch  xarm6_with_gripper_and_k4a_moveit_controller_manager.launch.xml
xarm6_k4a_moveit_config/urdf/: xarm6_with_gripper_and_k4a.xacro
