<?xml version="1.0"?>
<package format="2">
  <name>k4a_arm_support</name>
  <version>0.0.0</version>
  <description>The Support Package for the K4A Workcell package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lamadio@microsoft.com">Lou</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>eigen</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>ros_msft_onnx</depend>
  <!-- TODO lilustga cleanup
      <depend>winml_tracker</depend>
  <depend>winml_msgs</depend>
    
     <depend>robotiq_2f_c2_gripper_visualization</depend>
  <depend>robotiq_2f_85_gripper_visualization</depend>
  <depend>robotiq_2f_gripper_action_server</depend>
  <depend>robotiq_2f_gripper_control</depend>
  
   <depend>xarm6_k4a_moveit_config</depend> -->
  <depend>xarm6_moveit_config</depend>
 
  <depend>xarm_bringup</depend>
  <depend>xarm_controller</depend>
  <depend>rosbridge_server</depend>
  <depend>cv_camera</depend>
  <depend>tuw_checkerboard</depend>
  <depend>tuw_aruco</depend>

  <build_depend>xarm6_k4a_moveit_config</build_depend>
  <exec_depend>xarm6_k4a_moveit_config</exec_depend>
  <build_depend>xarm_description</build_depend>
  <exec_depend>xarm_description</exec_depend>
  <build_depend>xarm_gripper</build_depend>
  <exec_depend>xarm_gripper</exec_depend>

  <test_depend>rosunit</test_depend>
</package>
